Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxlECatReadRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);
typedef DWORD   PASCAL EXPORT funcAxlECatWriteRegister(DWORD dwStationAddress, WORD wRegisterOffset, VOID *pvData, WORD wLen);
extern funcAxlECatReadRegister                  *AxlECatReadRegister;
extern funcAxlECatWriteRegister                 *AxlECatWriteRegister;