Library/AXL(Library)/Delphi/AXDev.pas


// Read input PDO(Process Data Objects)
// dwBitOffset     : ProcessImage inputs bit offset value.
// dwDataBitLength : bit size of input pdo data.
// pbyData         : The Buffer for inserting read data.
function AxlECatReadPdoInput(dwBitOffset : DWord; dwDataBitLength : DWord; bypData : PByte) : DWord; stdcall;
    function AxlECatReadPdoInputEx (lBoardNo : LongInt; dwBitOffset : DWord; dwDataBitLength : DWord; pbyData : PByte) : DWord; stdcall;

// Read output PDO(Process Data Objects)
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of input pdo data.(for read)
// pbyData         : The Buffer for inserting read data.
function AxlECatReadPdoOutput(dwBitOffset : DWord; dwDataBitLength : DWord; bypData : PByte) : DWord; stdcall;
    function AxlECatReadPdoOutputEx (lBoardNo : LongInt; dwBitOffset : DWord; dwDataBitLength : DWord; pbyData : PByte) : DWord; stdcall;

// Write value to output process data.
// dwBitOffset     : ProcessImage outputs bit offset value.
// dwDataBitLength : bit size of output pdo data.(for write)
// pbyData         : The Buffer for inserting write data.
function AxlECatWritePdoOutput(dwBitOffset : DWord; dwDataBitLength : DWord; bypData : PByte) : DWord; stdcall;

// Read SDO(Service Data Objects) by using COE.
function AxlECatReadSdo(dwStationAddress : DWord; wObjectIndex : Word; byObjectSubIndex : Byte; bypData : PByte; dwDataLength : DWord; dwpReadDataLength : PDWord) : DWord; stdcall;
    function AxlECatReadSdoEx (lBoardNo : LongInt; dwStationAddress : DWord; wObjectIndex : Word; byObjectSubIndex : Byte; pbyData : PByte; dwDataLength : DWord; pdwReadDataLength : PDWord) : DWord; stdcall;

// Store values in SDO by using COE.
function AxlECatWriteSdo(dwStationAddress : DWord; wObjectIndex : Word; byObjectSubIndex : Byte; bypData : PByte; dwDataLength : DWord) : DWord; stdcall;
    function AxlECatWriteSdoEx (lBoardNo : LongInt; dwStationAddress : DWord; wObjectIndex : Word; byObjectSubIndex : Byte; pbyData : PByte; dwDataLength : DWord) : DWord; stdcall;

    function AxlECatReadSdoFromAxisDouble (lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; pdData : PDouble) : DWord; stdcall;

    function AxlECatWriteSdoFromAxisDouble (lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; pdData : PDouble) : DWord; stdcall;
// Read SDO(DWORD type) through the axis number.
function AxlECatReadSdoFromAxisDword(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; dwpData : PDWord) : DWord; stdcall;

// Store values in SDO(DWORD type) through the axis number.
function AxlECatWriteSdoFromAxisDword(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; dwpData : PDWord) : DWord; stdcall;

// Read SDO(WORD type) through the axis number.
function AxlECatReadSdoFromAxisWord(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; wpData : PWord) : DWord; stdcall;

// Store values in SDO(WORD type) through the axis number.
function AxlECatWriteSdoFromAxisWord(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; wpData : PWord) : DWord; stdcall;

// Read SDO(BYTE type) through the axis number.
function AxlECatReadSdoFromAxisByte(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; bypData : PByte) : DWord; stdcall;

// Store values in SDO(BYTE type) through the axis number.
function AxlECatWriteSdoFromAxisByte(lAxisNo : LongInt; wObjectIndex : Word; byObjectSubIndex : Byte; bypData : PByte) : DWord; stdcall;

// Read value of EEPROM.
function AxlECatReadEEPRom(dwStationAddress : DWord; wEEPRomStartOffset : Word; wpData : PWord; dwDataLength : DWord) : DWord; stdcall;

// Write value to EEPROM.
function AxlECatWriteEEPRom(dwStationAddress : DWord; wEEPRomStartOffset : Word; wpData : PWord; dwDataLength : DWord) : DWord; stdcall;
    function AxlECatReadEEPRomEx (lBoardNo : LongInt; dwStationAddress : DWord; wEEPRomStartOffset : Word; pwData : PWord; dwDataLength : DWord) : DWord; stdcall;

    function AxlECatWriteEEPRomEx (lBoardNo : LongInt; dwStationAddress : DWord; wEEPRomStartOffset : Word; pwData : PWord; dwDataLength : DWord) : DWord; stdcall;

// Read value of a register.
function AxlECatReadRegister(dwStationAddress : DWord; wRegisterOffset : Word; vpData : Pointer; wLen : Word) : DWord; stdcall;

// Write value of a register.
function AxlECatWriteRegister(dwStationAddress : DWord; wRegisterOffset : Word; vpData : Pointer; wLen : Word) : DWord; stdcall;

// Save BackupData as a file from among the object dictionary of EtherCat slave.
function AxlECatSaveHotSwapData(dwStationAddress : DWord) : DWord; stdcall;

// Load BackupData which saved as a file from corresponding EtherCat salve.
function AxlECatLoadHotSwapData(dwStationAddress : DWord) : DWord; stdcall;


// When using the HotSwapStart API(Function to advance HotSwap only for registered StationAddresses),
//       it stores the StationAddress in HotSwapConfig, confirms existence and deletes it.
function AxlECatSetHotSwap(dwStationAddress : DWord) : DWord; stdcall;
function AxlECatIsSetHotSwap(dwStationAddress : DWord) : DWord; stdcall;
function AxlECatReSetHotSwap(dwStationAddress : DWord) : DWord; stdcall;

// Set EtherCat master mode (configure = 0, RumMode = 1)
function AxlECatSetMasterMode(dwMasterMode : DWord) : DWord; stdcall;

// Get mode status of EtherCat master.
function AxlECatGetMasterMode(dwpMasterMode : PDWord) : DWord; stdcall;

// Set MasterOperationMode of EtherCat master.
function AxlECatSetMasterOperationMode(dwOperationMode : DWord) : DWord; stdcall;

// Get MasterOperationMode of EtherCat master.
function AxlECatGetMasterOperationMode(dwpOperationMode : PDWord) : DWord; stdcall;

// Requesting scan command to EtherCat master, and then command to save scaned data to SHM.
function AxlECatRequestScanData() : DWord; stdcall;


// Get total number of scanned slaves.
function AxlECatGetScanSlaveCount(dwpSlaveCount : PDWord) : DWord; stdcall;

// Get current status information of EtherCat master.
function AxlECatGetStatus(npECMasterStatus : PInteger; npECSlaveStatus : PInteger; npECConnectedSlave : PInteger; npECConfiguredSlave : PInteger; npJobTaskCycleCnt : PInteger; dwpECMasterNotification : PDWord) : DWord; stdcall;

// Reconnecting failed network.
function AxlEcatReConnect() : DWord; stdcall;

// Get address information of slave which be set.
function AxmECatReadAddress(lAxisNo : LongInt; dwpStationAddress : PDWord; lpAutoIncAddress : PLongInt; dwpAliasAddress : PDWord) : DWord; stdcall;
function AxdECatReadAddress(lModuleNo : LongInt; dwpStationAddress : PDWord; lpAutoIncAddress : PLongInt; dwpAliasAddress : PDWord) : DWord; stdcall;
function AxaECatReadAddress(lModuleNo : LongInt; dwpStationAddress : PDWord; lpAutoIncAddress : PLongInt; dwpAliasAddress : PDWord) : DWord; stdcall;
function AxsECatReadAddress(lPortNo : LongInt; dwpStationAddress : PDWord; lpAutoIncAddress : PLongInt; dwpAliasAddress : PDWord) : DWord; stdcall;


// Monitor
// Add an item to proceed with data collection.
function AxlMonitorSetItem(lItemIndex : LongInt; dwSignalType : DWord; lSignalNo : LongInt; lSubSignalNo : LongInt) : DWord; stdcall;

// Get information about items to be collected.
function AxlMonitorGetIndexInfo(lpItemSize : PLongInt; lpItemIndex : PLongInt) : DWord; stdcall;

// Get detailed settings of each items for data collection progress.
function AxlMonitorGetItemInfo(lItemSize : LongInt; dwpSignalType : PDWord; lpSignalNo : PLongInt; lpSubSignalNo : PLongInt) : DWord; stdcall;

// Reset settings of all data collection items.
function AxlMonitorResetAllItem() : DWord; stdcall;

// Reset settings of selected data collection items.
function AxlMonitorResetItem(lItemIndex : LongInt) : DWord; stdcall;

// Set the trigger condition of data collection.
function AxlMonitorSetTriggerOption(dwSignalType : DWord; lSignalNo : LongInt; lSubSignalNo : LongInt; dwOperatorType : DWord; dValue1 : Double; dValue2 : Double) : DWord; stdcall;


// Reset trigger condition of data collection.
function AxlMonitorResetTriggerOption() : DWord; stdcall;

// Start collecting data.
function AxlMonitorStart(dwStartOption : DWord; dwOverflowOption : DWord) : DWord; stdcall;

// Stop collecting data.
function AxlMonitorStop() : DWord; stdcall;

// Read collected data.
function AxlMonitorReadData(lpItemSize : PLongInt; lpDataCount : PLongInt; dpReadData : PDouble) : DWord; stdcall;

// Read period of data collection.
function AxlMonitorReadPeriod(dwpPeriod : PDWord) : DWord; stdcall;



//////////////////////////////////////////////////////////////////////////
// MonitorEx
// Add an item to proceed with data collection.
function AxlMonitorExSetItem(lItemIndex : LongInt; dwSignalType : DWord; lSignalNo : LongInt; lSubSignalNo : LongInt) : DWord; stdcall;

// Gets information about the items to be collected.
function AxlMonitorExGetIndexInfo(lpItemSize : PLongInt; lpItemIndex : PLongInt) : DWord; stdcall;

// Gets the detailed settings for each item to proceed with data collection.
function AxlMonitorExGetItemInfo(lItemIndex : LongInt; dwpSignalType : PDWord; lpSignalNo : PLongInt; lpSubSignalNo : PLongInt) : DWord; stdcall;

// Reset the settings for all data collection items.
function AxlMonitorExResetAllItem() : DWord; stdcall;

// Reset the settings of the selected data collection item.
function AxlMonitorExResetItem(lItemIndex : LongInt) : DWord; stdcall;

// Sets the trigger condition for data collection.
function AxlMonitorExSetTriggerOption(dwSignalType : DWord; lSignalNo : LongInt; lSubSignalNo : LongInt; dwOperatorType : DWord; dValue1 : Double; dValue2 : Double) : DWord; stdcall;


// Reset trigger conditions for data collection.
function AxlMonitorExResetTriggerOption() : DWord; stdcall;

// Start collecting data.
function AxlMonitorExStart(dwStartOption : DWord; dwOverflowOption : DWord) : DWord; stdcall;

// Stop collecting data.
function AxlMonitorExStop() : DWord; stdcall;

// Gets collected data.
function AxlMonitorExReadData(lpItemSize : PLongInt; lpDataCount : PLongInt; dpReadData : PDouble) : DWord; stdcall;

// Gets the period of data collection.
function AxlMonitorExReadPeriod(dwpPeriod : PDWord) : DWord; stdcall;


//////////////////////////////////////////////////////////////////////////

// Linear interpolation about 2 axis including information of offset position for X2, Y2 axis.
function AxmLineMoveDual01(lCoordNo : LongInt; dpEndPosition : PDouble; dVelocity : Double; dAccel : Double; dDecel : Double; dOffsetLength : Double; dTotalLength : Double; dpStartOffsetPosition : PDouble; dpEndOffsetPosition : PDouble) : DWord; stdcall;
// Arc interpolation about 2 axis including information of offset position for X2, Y2 axis.
function AxmCircleCenterMoveDual01(lCoordNo : LongInt; lpAxes : PLongInt; dpCenterPosition : PDouble; dpEndPosition : PDouble; dVelocity : Double; dAccel : Double; dDecel : Double; dwCWDir : DWord; dOffsetLength : Double; dTotalLength : Double; dpStartOffsetPosition : PDouble; dpEndOffsetPosition : PDouble) : DWord; stdcall;

// About ECAT Foe
function AxdSetFirmwareUpdateInfo(lModuleNo : LongInt; dwTotalDataSize : DWord; dwTotalPacketSize : DWord) : DWord; stdcall;
function AxdSetFirmwareDataTrans(lModuleNo : LongInt; dwPacketIndex : DWord; dwpaPacketData : PDWord) : DWord; stdcall;
function AxdSetFirmwareUpdate(lModuleNo : LongInt; szFileName : PChar; dwFileNameLen : DWord; dwPassWord : DWord) : DWord; stdcall;


function AxaSetFirmwareUpdateInfo(lModuleNo : LongInt; dwTotalDataSize : DWord; dwTotalPacketSize : DWord) : DWord; stdcall;
function AxaSetFirmwareDataTrans(lModuleNo : LongInt; dwPacketIndex : DWord; dwpaPacketData : PDWord) : DWord; stdcall;
function AxaSetFirmwareUpdate(lModuleNo : LongInt; szFileName : PChar; dwFileNameLen : DWord; dwPassWord : DWord) : DWord; stdcall;

